fix: low contrast of web compenent when in dark mode

--- a/packages/web-component/src/scss/modules/_pages.scss
+++ b/packages/web-component/src/scss/modules/_pages.scss
@@ -32,6 +32,10 @@ $max-height: 98vh;
   width: 100%;
   max-width: 55em;
 
+  p {
+    @extend %themed-text;
+  }
+
   &--multi {
     @extend %border--strong--left;
     @extend %border--strong--right;
